# Gameshop

./: .gitignore
CourseSell20/: Dockerfile  Jenkinsfile  celerybeat-schedule.db  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
CourseSell20/CourseSell20/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
CourseSell20/CustomAuth/: apps.py  forms.py  serializers.py  urls.py  views.py
CourseSell20/api/: serializers.py  urls.py  views.py
CourseSell20/source/: enums.py  forms.py  igdbAPi.py  models.py  sent_mail.py  tasks.py  tests.py  urls.py  views.py
CourseSell20/source/migrations/: 0001_initial.py  0002_alter_user_balance.py  0003_game_rating.py  0004_alter_game_image.py  0005_alter_game_image.py  0006_alter_game_image.py  0007_alter_game_image.py  0008_alter_game_image.py  0009_alter_game_image.py  0010_alter_game_image.py  0011_alter_game_image.py  0012_alter_game_image.py  0013_alter_game_image.py  0014_alter_game_image.py  0015_alter_game_image.py  0016_order_sum_order.py  0017_order_quantity.py
CourseSell20/source/static/source/css/: registration.css  templatemo-lugx-gaming.css
CourseSell20/source/static/source/js/: DailyRevenue.js
CourseSell20/templates/source/: NoBalance.html  add_game.html  balance.html  cart.html  dashboard.html  graph.html  login.html  product-details.html  profile.html  register.html  shop.html  successpay.html
