[tool.poetry]
name = "gameshop"
version = "0.1.0"
description = ""
authors = ["maratahmetov <ax-marat@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django-prometheus = "^2.3.1"
python-certifi-win32 = "^1.6.1"
django = "4.1.4"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
