[tool.poetry]
name = "gameshop"
version = "0.1.0"
description = ""
authors = ["maratahmetov <ax-marat@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.7.0"
django = "4.1.4"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
psycopg2 = "^2.9.7"
djangorestframework-simplejwt = "^5.3.0"
celery = "^5.3.4"
django-prometheus = "^2.3.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
